force-app/main/default/objects/Callback_Request_Settings__mdt/Callback_Request_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for Callback Request</description>
    <label>Callback Request Settings</label>
    <pluralLabel>Callback Request Settings</pluralLabel>
</CustomObject>