force-app/main/default/objects/Callback_Request_Settings__mdt/fields/Case_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Name__c</fullName>
    <description>Queue name from cases will be added to criteria for Callback Request</description>
    <label>Case Queue Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>