force-app/main/default/objects/Callback_Request_Settings__mdt/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <inlineHelpText>Case Status to verify for SLA</inlineHelpText>
    <label>CaseStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>