force-app/main/default/objects/Callback_Request_Settings__mdt/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>CustomerType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>