force-app/main/default/objects/Callback_Request_Settings__mdt/fields/Enquiry_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Type__c</fullName>
    <inlineHelpText>use comma to add multiple value</inlineHelpText>
    <label>Enquiry Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>