force-app/main/default/objects/Callback_Request_Settings__mdt/fields/Initial_SLA_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Initial_SLA_in_Hours__c</fullName>
    <label>Initial SLA in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>