force-app/main/default/objects/Callback_Request_Settings__mdt/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <inlineHelpText>User comma &quot;,&quot; to add more than once value</inlineHelpText>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>